# datumaro

./: .markdownlint.yaml  .pre-commit-config.yaml  3rd-party.txt  4  CHANGELOG.md  MANIFEST.in  README.md  contributing.md  pyproject.toml  pytest.ini  requirements-core.txt  requirements-default.txt  requirements-lock.txt  requirements.txt  setup.py  stable  test_new_converters.py  tox.ini
.ci/: ipas_default.config
.github/: CODEOWNERS  dependabot.yml  dependency_review_config.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-approve.yml  bandit.yml  code_scan.yml  codeql.yml  collect-sbom-library.yaml  dependency-review.yaml  dependency-review.yml  docs_latest.yml  docs_stable.yml  health_check.yml  issue_assignment.yml  linter.yml  nightly_check.yml  notify_teams.yml  pr_check.yml  publish_to_pypi.yml  renovate-config-validator.yml  renovate.yml  scorecard.yml  secret-scan.yml  security-scan.yml  weekly_check.yml  zizmor-scan.yaml
1.10.0rc1/_modules/: enum.html  functools.html  typing.html
1.10.0rc1/docs/: release_notes.html
1.10.0rc1/docs/explanation/: concept.html
1.10.0rc1/docs/reference/: datumaro_module.html
1.10.0rc1/docs/user-manual/: extending.html
develop/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
develop/_modules/: abc.html  collections.html  contextlib.html  copy.html  dataclasses.html  enum.html  functools.html  glob.html  index.html  queue.html  threading.html  typing.html
develop/_modules/attr/: _make.html
develop/_modules/datumaro/: util.html
develop/_modules/git/: util.html
develop/_sources/docs/: release_notes.rst.txt
develop/docs/: index.html  release_notes.html
develop/docs/command-reference/: compare.html  convert.html  detect.html  dinfo.html  download.html  filter.html  format.html  merge.html  overview.html  patch.html  stats.html  transform.html  util.html  validate.html
develop/docs/data-formats/: datumaro_format.html  media_formats.html
develop/docs/explanation/: architecture.html  concept.html  project.html
develop/docs/get-started/: introduction.html
develop/docs/jupyter_notebook_examples/: dataset_IO.html  e2e_example.html  explore.html  manipulate.html  refine.html  transform.html
develop/docs/reference/: datumaro_module.html  supported_plugins.html
develop/docs/user-manual/: extending.html  how_to_control_tm_data_collection.html  how_to_use_datumaro.html  model_preparation.html
docker/segment-anything/: README.md  requirements.txt
docs/: README.md  requirements-lock.txt  requirements.txt
docs/source/: conf.py
docs/source/docs/: index.rst  release_notes.rst
notebooks/: 05_transform.ipynb  08_e2e_example_yolo_ultralytics_trainer.ipynb  09_encrypt_dataset.ipynb  11_validate.ipynb  21_kaggle_data_cleaning.ipynb  22_framework_converter.ipynb
rust/: Cargo.toml
rust/src/: coco_page_mapper.rs  datum_page_mapper.rs  json_section_page_mapper.rs  page_mapper.rs  utils.rs
rust/tests/: coco_page_mapper.rs
src/datumaro/: __init__.py  errors.py  ops.py  project.py
src/datumaro/cli/: __main__.py
src/datumaro/components/: annotation.py  cli_plugin.py  comparator.py  config.py  config_model.py  crypter.py  dataset.py  dataset_base.py  dataset_item_storage.py  dataset_storage.py  environment.py  errors.py  exporter.py  extractor_tfds.py  filter.py  format_detection.py  importer.py  lazy_plugin.py  media.py  operations.py  progress_reporting.py  project.py  (+4 more)
test_build/: genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
test_build/_modules/: abc.html  contextlib.html  copy.html  enum.html  functools.html  index.html  typing.html
test_build/docs/: index.html  release_notes.html
tests/: conftest.py  requirements.py
tests/unit/: test_ade20k2017_format.py  test_ade20k2020_format.py  test_align_celeba_format.py  test_annotation.py  test_api.py  test_ava_format.py  test_brats_format.py  test_brats_numpy_format.py  test_camvid_format.py  test_celeba_format.py  test_cifar_format.py  test_cityscapes_format.py  test_coco_format.py  test_compare.py  test_config.py  test_configurable_validator.py  test_cvat_format.py  test_dataset.py  test_deprecation.py  test_environment.py  test_extractor_tfds.py  test_format_detection.py  test_framework_converter.py  test_hl_ops.py  test_icdar_format.py  test_image.py  test_image_dir_format.py  test_image_zip_format.py  test_imagenet_format.py  test_imagenet_txt_format.py  test_images.py  test_kinetics_format.py  test_kitti_3d_format.py  test_kitti_format.py  test_kitti_raw_format.py  test_labeling.py  test_labelme_format.py  test_lfw_format.py  test_market1501_format.py  test_mars_format.py  (+29 more)
tests/utils/: test_utils.py
v1.10.0/: genindex.html  objects.inv  py-modindex.html  searchindex.js
v1.10.0/_modules/: abc.html  collections.html  contextlib.html  copy.html  dataclasses.html  enum.html  functools.html  glob.html  index.html  threading.html  typing.html
v1.10.0/docs/: index.html  release_notes.html
v1.10.0rc1/: genindex.html  objects.inv  searchindex.js
v1.10.0rc1/_modules/: collections.html  contextlib.html  index.html
v1.10.0rc1/docs/: index.html
v1.11.0/: genindex.html  py-modindex.html  search.html
v1.11.0/_modules/: contextlib.html
v1.11.0/docs/: index.html
v1.12.0/: genindex.html  searchindex.js
v1.12.0/_modules/: contextlib.html  copy.html  enum.html  glob.html  index.html
v1.12.0/docs/: index.html
v1.13.0/: py-modindex.html  searchindex.js
v1.13.0/_modules/: collections.html  copy.html  threading.html
v1.13.1/: genindex.html  objects.inv  py-modindex.html  search.html
v1.13.1/_modules/: enum.html  glob.html  index.html  threading.html
v1.13.1/docs/: release_notes.html
v1.13.2/_modules/: abc.html  collections.html  glob.html  threading.html  typing.html
v1.13.2/docs/: index.html  release_notes.html
v1.13.3/: genindex.html  py-modindex.html  search.html
v1.13.3/_modules/: collections.html  copy.html  enum.html  functools.html  index.html  threading.html  typing.html
v1.13.3/docs/: release_notes.html
(+4799 files in other folders)
